# ufedm

./: .clang-format  .gitignore  CMakeLists.txt  Kbuild  LICENSE  README.md  TESTS.md  build.sh  deploy-build.sh  run-nandsim-vm.sh
common/proxy_dev/: dev.c
common/ringbuffer/: packet.h
include/: defs.h  proxy_eventfd.h  proxy_ioctl.h  proxy_queue.h  rb_packet.h  shared_mem.h  shm_packet.h  shm_slot.h
includes/: defs.h  shared_rings.h
kernel/: Kbuild  init.c
kernel/backing_mtd/: device.h
kernel/proxy_device/: chrdev.c  class.c  device.c  device.h  eventfd.c  eventfd.h  io.c  io.h  shm.c  shm.h
kernel/upper_mtd/: device.c  device.h
src/: init.c
src/backing_mtd/: device.c  device.h
src/proxy_device/: chrdev.c  chrdev.h  class.c  class.h  device.c  device.h  eventfd.h
src/upper_mtd/: backend.c  backend.h  device.c  device.h
user/: CMakeLists.txt  qemu_vm.udhcpc.script
user/common/: proxy_dev.c  proxy_dev.h
user/testd/: CMakeLists.txt  README.md  ecc-sw-hamming.c  main.c  testd.md
user/utests/: CMakeLists.txt  test-100-insmod-rmmod-sequences.sh  test_proxy_ioctls.c  test_proxy_mmap.c
utests/: CMakeLists.txt  test_proxy_ioctls.c  test_proxy_mmap.c
